fix: gap issue

--- a/assets/css/career.css
+++ b/assets/css/career.css
@@ -149,5 +149,6 @@
 @media screen and (max-width: 380px) {
     .jobType {
         flex-direction: column !important;
+        gap: 2px !important;
     }
 }
